<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/goldweight"
            android:layout_width="410dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/goldweight"
            android:inputType="number"
            android:textColorHint="@color/hintTextColor"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="80dp"
            style="@style/PrimaryTextAppearance"/>

        <EditText
            android:id="@+id/goldvalue"
            android:layout_width="410dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/goldvalue"
            android:inputType="number"
            android:textColorHint="@color/hintTextColor"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="80dp"
            style="@style/PrimaryTextAppearance"/>

        <RadioGroup
            android:id="@+id/radioGroupGoldType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/keep"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/keepbutton"
                style="@style/PrimaryTextAppearance"/>

            <RadioButton
                android:id="@+id/wear"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/wearbutton"
                style="@style/PrimaryTextAppearance"/>

        </RadioGroup>

        <Button
            android:id="@+id/button2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#483D3F"
            android:fontFamily="sans-serif-medium"
            android:text="@string/calculatebutton"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/totalgoldvalue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/totalgoldvalue"
            style="@style/PrimaryTextAppearance"/>

        <TextView
            android:id="@+id/zakatpayable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/zakatpayable"
            style="@style/PrimaryTextAppearance"/>

        <TextView
            android:id="@+id/totalzakat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/totalzakat"
            style="@style/PrimaryTextAppearance"/>

        <Button
            android:id="@+id/about"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#483D3F"
            android:text="@string/aboutbutton"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/darkmodeswitch"
            style="@style/PrimaryTextAppearance"/>

    </LinearLayout>

</RelativeLayout>

